--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,3 +1,47 @@
+.navBar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color:#7F8585 ;
+    .imageNavbar {
+
+        .iconNavbar {
+            height: 77px;
+            width: 77px;
+
+        }
+    }
+
+    .categoriesNavbar {
+        padding-right: 100px;
+        display: flex;
+        flex-direction: row;
+        gap: 50px;
+
+        .categorieNavbar {
+            font-family: sans-serif;
+            text-decoration: none;
+            color: white;
+            font-size: 20px;
+        }
+    }
+    .count{
+        display: flex;
+        flex-direction: row;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+/*
 .menuNavegable {
     background-color: #FFA639;
     height: auto;
@@ -6,7 +50,7 @@
     justify-content:space-evenly;
 }
 
-.logo{
+.icon-navbar{
     background-color: #FFFFFF;
     width: 50px;
     height: 50px;
@@ -40,4 +84,4 @@
 .cardCarrito img{
     width: 30px;
     height: 30px;
-}
+}*/
