--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -3,7 +3,8 @@
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    background-color:#7F8585 ;
+    background-color:#090f41 ;
+
     .imageNavbar {
 
         .iconNavbar {
