--- a/src/components/itemListContainer/itemListContainer.css
+++ b/src/components/itemListContainer/itemListContainer.css
@@ -1,40 +1,42 @@
 .item-list-container {
     padding: 10px 50px;
+    background-color: #0b1e42;
+    color: white;
 }
 
 .title-item-list-container {
     padding-bottom: 20px;
+    text-align: center;
 }
 
 .item-list {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
 .item {
-    flex-basis: 20%;
+    flex-basis: 0%;
+    border-radius: 5px;
     display: flex;
     flex-direction: column;
     align-items: start;
-    margin-bottom: 50px;
+    margin: 0 50px;
+    margin-bottom: 70px;
+    scale: 1;
+    transition: 0.3s ease-in-out;
+}
+
+.item:hover {
+    scale: 1.1;
+    box-shadow: 7px 0px 58px 15px rgba(112,134,176,0.73);
+    -webkit-box-shadow: 7px 0px 58px 15px rgba(112,134,176,0.73);
+    -moz-box-shadow: 7px 0px 58px 15px rgba(112,134,176,0.73);
 }
 
 .image-item {
     border-radius: 5px;
-}
-
-.content-item {
-    display: flex;
-    flex-direction: column;
-    font-size: 18px;
-}
-
-.button-item {
-    width: 100px;
-    text-align: center;
-    padding: 10px;
-    border-radius: 5px;
-    color: white;
-    text-decoration: none;
-    background-color: rgb(61, 61, 61);
+    width: 200px;
+    height: 250px;
+    object-fit: cover;
 }
