--- a/src/components/NavBar/cartWidget.css
+++ b/src/components/NavBar/cartWidget.css
@@ -4,6 +4,8 @@
     padding: 0 40px;
     color: white;
     text-decoration: none;
+    font-family: sans-serif;
+    background-color:#050927 ;
 }
 
 .cartwidget .number {
