--- a/src/components/Cart/cart.css
+++ b/src/components/Cart/cart.css
@@ -6,7 +6,8 @@
     justify-content: center;
     align-items: center;
     color: white;
-    background-color: black;
+    background-color: #02122e;
+    font-family: sans-serif;
 }
 
 .cart {
