--- a/src/components/itemDetailContainer/itemDetail.css
+++ b/src/components/itemDetailContainer/itemDetail.css
@@ -1,7 +1,8 @@
 .item-detail {
     width: 100%;
     display: flex;
-    background-color: #0b1e42;
+    background-color: #02122e;
+    font-family: sans-serif;
     color: white;
 }
 
